--- a/src/Lab.ChaosEngineering.Infra/Lab.ChaosEngineering.Infra.csproj
+++ b/src/Lab.ChaosEngineering.Infra/Lab.ChaosEngineering.Infra.csproj
@@ -27,5 +27,9 @@
   <ItemGroup>
     <ProjectReference Include="..\Lab.ChaosEngineering.Domain\Lab.ChaosEngineering.Domain.csproj" />
   </ItemGroup>
+	
+  <ItemGroup>
+    <Folder Include="Cache\" />
+  </ItemGroup>
 
 </Project>
