--- a/src/Lab.ChaosEngineering.Services/Lab.ChaosEngineering.Services.csproj
+++ b/src/Lab.ChaosEngineering.Services/Lab.ChaosEngineering.Services.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Polly" Version="8.4.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.7.33" />
   </ItemGroup>
 
   <ItemGroup>
